# stays_qt_project

./: .gitignore  CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
